test/pass/internal/nested_if_return_fold.lily
define f(a: Integer) : Integer
{
    if a == 1: {
        if a == 2: {
            return 1
        elif a == 3:
            return 2
        else:
            return 3
        }
    else:
        return 4
    }
}
